--- a/packages/message/tsconfig.json
+++ b/packages/message/tsconfig.json
@@ -1,20 +1,37 @@
 {
+  // 编译选项
   "compilerOptions": {
+    // 目标 ECMAScript 版本
     "target": "ESNext",
+    // JSX 保留
     "jsx": "preserve",
+    // 包含的库
     "lib": ["DOM", "ESNext"],
+    // 基础目录
     "baseUrl": ".",
+    // 模块类型
     "module": "ESNext",
+    // 模块解析策略
     "moduleResolution": "node",
+    // 解析 JSON 模块
     "resolveJsonModule": true,
+    // 包含的类型声明
     "types": ["node"],
+    // 严格模式
     "strict": true,
+    // 严格空值检查
     "strictNullChecks": true,
+    // 未使用局部变量
     "noUnusedLocals": true,
+    // 允许合成默认导入
     "allowSyntheticDefaultImports": true,
+    // 启用 ES 模块互操作性
     "esModuleInterop": true,
+    // 文件名大小写敏感
     "forceConsistentCasingInFileNames": true
   },
+  // 包含的文件
   "include": ["src/**/*"],
+  // 排除的文件
   "exclude": ["node_modules", "dist"]
 }
